@@ -399,19 +399,6 @@ class MailboxController extends ViMbAdmin_Controller_Action
                         break;
                     }
                         
-                    // does an alias already exist?
-                    $dup = Doctrine::getTable( 'Alias' )->findOneByAddress( "{$this->_mailbox['local_part']}@{$this->_mailbox['domain']}" );
-    
-                    if( $dup )
-                    {
-                        $this->addMessage(
-                            _( 'Alias already exists for' ) . " {$this->_mailbox['local_part']}@{$this->_mailbox['domain']}",
-                            ViMbAdmin_Message::ERROR
-                        );
-                        break;
-                    }
-                    
-    
                     if( $this->_options['mailboxAliases'] == 1 )
                     {
                         $aliasModel = new Alias();
